--- a/server/views/register.jade
+++ b/server/views/register.jade
@@ -9,6 +9,8 @@ head#head
   script(type='text/javascript', src='/app/validators.js')
   link(type='text/css', rel='stylesheet', href='/libs/dojo/dijit/themes/claro/claro.css', media='screen')
 body.claro
+  script
+    loginValue="#{login}";
   #network-alert-bar
   #app-alert-bar
   #loadingOverlay.pageOverlay
