Written out how it will work in terms of session and user management so that it will work in terms of API and application. Worked on the 'register' form, so that it shows a simplified form if user is logged in.

--- a/server/views/register.jade
+++ b/server/views/register.jade
@@ -15,6 +15,6 @@ body.claro
   #app-alert-bar
   #loadingOverlay.pageOverlay
     .loadingMessage Loading...
-  h1 Register to Booking Dojo
+  h1 Register a workspace
   #registerForm
     
