--- a/client/widgets/templates/RegisterForm.html
+++ b/client/widgets/templates/RegisterForm.html
@@ -2,10 +2,10 @@
   <div data-dojo-type="dijit.layout.StackContainer" data-dojo-attach-point="container" data-dojo-props="doLayout:false" style="height:100%">
 
     <div data-dojo-type="dijit.layout.ContentPane" data-dojo-attach-point="registerAsAnon">
-      <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBar"></div>
-      <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="form" method="POST">
+      <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBarAsAnon"></div>
+      <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsAnon" method="POST">
         <label for="${id}_workspace_user">Workspace name</label>
-        <input name="workspace" id="${id}_workspace_user" data-dojo-attach-point="workspaceUser" data-dojo-type="app.ValidationWorkspace" />
+        <input name="workspace" id="${id}_workspace_user" data-dojo-attach-point="workspaceAsAnon" data-dojo-type="app.ValidationWorkspace" />
         <label for="${id}_email">Email</label>
         <input name="email" id="${id}_email" data-dojo-attach-point="email" data-dojo-type="app.ValidationEmail" />
         <label for="${id}_login">Login</label>
@@ -14,15 +14,16 @@
         <input name="password" id="${id}_password0" data-dojo-attach-point="password0" data-dojo-type="app.ValidationPassword" />
         <label for="${id}_password1">Confirm password</label>
         <input name="password" id="${id}_password1" data-dojo-attach-point="password1" data-dojo-type="app.ValidationPassword" />
-        <input type="submit" data-dojo-attach-point="button" data-dojo-type="app.BusyButton" label="Create!" />
+        <input type="submit" data-dojo-attach-point="buttonAsAnon" data-dojo-type="app.BusyButton" label="Create!" />
       </form>
     </div>
 
     <div data-dojo-type="dijit.layout.ContentPane" data-dojo-attach-point="registerAsUser">
-      <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="form" method="POST">
+      <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBarAsUser"></div>
+      <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsUser" method="POST">
         <label for="${id}_workspace_anon">Workspace name</label>
-        <input name="workspace" id="${id}_workspace_anon" data-dojo-attach-point="workspaceAnon" data-dojo-type="app.ValidationWorkspace" />
-        <input type="submit" data-dojo-attach-point="button" data-dojo-type="app.BusyButton" label="Create!" />
+        <input name="workspace" id="${id}_workspace_anon" data-dojo-attach-point="workspaceAsUser" data-dojo-type="app.ValidationWorkspace" />
+        <input type="submit" data-dojo-attach-point="buttonAsUser" data-dojo-type="app.BusyButton" label="Create!" />
       </form>     
     </div>
 
