Made error check for 403 less fragile; implemented user ability to register workspace name when logged in

--- a/client/widgets/templates/RegisterForm.html
+++ b/client/widgets/templates/RegisterForm.html
@@ -9,7 +9,7 @@
         <label for="${id}_email">Email</label>
         <input name="email" id="${id}_email" data-dojo-attach-point="email" data-dojo-type="app.ValidationEmail" />
         <label for="${id}_login">Login</label>
-        <input name="login" id="${id}_login" data-dojo-attach-point="login" data-dojo-type="app.ValidationUsername" />
+        <input name="login" id="${id}_login" data-dojo-attach-point="login" data-dojo-type="dijit.form.TextBox" />
         <label for="${id}_password0">Password</label>
         <input name="password" id="${id}_password0" data-dojo-attach-point="password0" data-dojo-type="app.ValidationPassword" />
         <label for="${id}_password1">Confirm password</label>
