--- a/client/widgets/templates/RegisterForm.html
+++ b/client/widgets/templates/RegisterForm.html
@@ -1,15 +1,22 @@
 <div>
   <div data-dojo-type="dijit.layout.StackContainer" data-dojo-attach-point="container" data-dojo-props="doLayout:false" style="height:100%">
 
+    <div data-dojo-type="dijit.Dialog" data-dojo-attach-point="loginDialog">
+      <div data-dojo-type="app.LoginForm" data-dojo-attach-point="loginForm"></div>
+    </div>
+
     <div data-dojo-type="dijit.layout.ContentPane" data-dojo-attach-point="registerAsAnon">
+      <div class="registerMessage">
+        You will create a new user <i>and</i> a new workspace. If you already have a user, <a href="#" data-dojo-attach-event="onclick:_loginAndSwap">login</a> first!
+      </div>
       <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBarAsAnon"></div>
-      <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsAnon" method="POST">
+      <form data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsAnon" method="POST">
         <label for="${id}_workspace_user">Workspace name</label>
         <input name="workspace" id="${id}_workspace_user" data-dojo-attach-point="workspaceAsAnon" data-dojo-type="app.ValidationWorkspace" />
         <label for="${id}_email">Email</label>
         <input name="email" id="${id}_email" data-dojo-attach-point="email" data-dojo-type="app.ValidationEmail" />
         <label for="${id}_login">Login</label>
-        <input name="login" id="${id}_login" data-dojo-attach-point="login" data-dojo-type="dijit.form.TextBox" />
+        <input name="login" id="${id}_login" data-dojo-attach-point="login" data-dojo-type="app.ValidationUsername" />
         <label for="${id}_password0">Password</label>
         <input name="password" id="${id}_password0" data-dojo-attach-point="password0" data-dojo-type="app.ValidationPassword" />
         <label for="${id}_password1">Confirm password</label>
@@ -19,6 +26,9 @@
     </div>
 
     <div data-dojo-type="dijit.layout.ContentPane" data-dojo-attach-point="registerAsUser">
+      <div class="registerMessage">
+        You are currently logged in. Your workspace will be registered under your existing username. You can <a href="#" data-dojo-attach-event="onclick:_logoutAndSwap">logout</a> if you like!
+      </div>
       <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBarAsUser"></div>
       <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsUser" method="POST">
         <label for="${id}_workspace_anon">Workspace name</label>
