--- a/client/widgets/templates/RegisterForm.html
+++ b/client/widgets/templates/RegisterForm.html
@@ -1,7 +1,7 @@
 <div>
   <div data-dojo-type="dijit.layout.StackContainer" data-dojo-attach-point="container" data-dojo-props="doLayout:false" style="height:100%">
 
-    <div data-dojo-type="dijit.Dialog" data-dojo-attach-point="loginDialog">
+    <div data-dojo-type="dijit.Dialog" data-dojo-attach-point="loginDialog" data-dojo-props="">
       <div data-dojo-type="app.LoginForm" data-dojo-attach-point="loginForm"></div>
     </div>
 
@@ -27,7 +27,7 @@
 
     <div data-dojo-type="dijit.layout.ContentPane" data-dojo-attach-point="registerAsUser">
       <div class="registerMessage">
-        You are currently logged in. Your workspace will be registered under your existing username. You can <a href="#" data-dojo-attach-event="onclick:_logoutAndSwap">logout</a> if you like!
+        Hi <strong>${loginValue}</strong>! You are currently logged in. Your workspace will be registered under your existing username, <strong>${loginValue}</strong>. You can <a href="#" data-dojo-attach-event="onclick:_logoutAndSwap">logout</a> if you like!
       </div>
       <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBarAsUser"></div>
       <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsUser" method="POST">
