--- a/server/views/error.jade
+++ b/server/views/error.jade
@@ -4,6 +4,6 @@ head#head
   link(type='text/css', rel='stylesheet', href="/app/rrl.css")
 body.claro
   h1 Sorry! 
-  #loginForm
+  #roundForm
     Sorry! Booking dojo is down at the moment, please try again later!
     
