--- a/server/views/notFound.jade
+++ b/server/views/notFound.jade
@@ -4,6 +4,6 @@ head#head
   link(type='text/css', rel='stylesheet', href="/app/rrl.css")
 body.claro
   h1 Sorry! 
-  #loginForm
+  #roundForm
     Sorry! Workspace not found!
     
