--- a/server/views/ws.jade
+++ b/server/views/ws.jade
@@ -13,6 +13,7 @@ body.claro
     loginValue="#{login}";
     workspaceIdValue="#{workspaceId}";
     workspaceNameValue="#{workspaceName}";
+    tokenValue="#{token}";
   #network-alert-bar
   #app-alert-bar
   #loadingOverlay.pageOverlay
