* C/S   : Revise all code, make sure that names of stores are consistent, place pages under /pages/login, pages/register etc,             change the store names   * C/S   : On the server side, a middleware will read the token from URL and set req.application.workspaceId and req.application.userId:             If the middleware finds that the user is not logged in, needs to return the right 4xx error.   * SERVER: Check that middleware tokenApi actually works (check by getting Javascript to provide the wrong API key).   * CLIENT: Hide passwords

--- a/client/widgets/templates/RegisterForm.html
+++ b/client/widgets/templates/RegisterForm.html
@@ -18,9 +18,9 @@
         <label for="${id}_login">Login</label>
         <input name="login" id="${id}_login" data-dojo-attach-point="login" data-dojo-type="app.ValidationUsername" />
         <label for="${id}_password0">Password</label>
-        <input name="password" id="${id}_password0" data-dojo-attach-point="password0" data-dojo-type="app.ValidationPassword" />
+        <input name="password" type="password" id="${id}_password0" data-dojo-attach-point="password0" data-dojo-type="app.ValidationPassword" />
         <label for="${id}_password1">Confirm password</label>
-        <input name="password" id="${id}_password1" data-dojo-attach-point="password1" data-dojo-type="app.ValidationPassword" />
+        <input name="password" type="password" id="${id}_password1" data-dojo-attach-point="password1" data-dojo-type="app.ValidationPassword" />
         <input type="submit" data-dojo-attach-point="buttonAsAnon" data-dojo-type="app.BusyButton" label="Create!" />
       </form>
     </div>
