--- a/server/views/pick.jade
+++ b/server/views/pick.jade
@@ -20,5 +20,5 @@ body.claro
     each workspace in list
       ul.simpleList
         li
-          a(href="/ws/#{workspace.id}") #{workspace.name}
+          a(href="/pages/ws/#{workspace.id}") #{workspace.name}
           p #{workspace.description}
