* SERVER: Check logging, and Check that things haven't bombed after latest extensive changes, and that logging still happens OK.   * C/S   : Revise "protocol", make it a lot better and nicer so that the response is always, always the same (and extra "things" can             be sent to the app in terms of what to refresh, for example). MAKE SURE THAT IT'S ALWAYS THE SAME FORMAT FOR EVERY ERROR   * CLIENT: Fix password so that it's not "mustChange" in login form (user might decide to change username and not password)

--- a/client/widgets/templates/RegisterForm.html
+++ b/client/widgets/templates/RegisterForm.html
@@ -11,8 +11,8 @@
       </div>
       <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBarAsAnon"></div>
       <form data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsAnon" method="POST">
-        <label for="${id}_workspace_user">Workspace name</label>
-        <input name="workspace" id="${id}_workspace_user" data-dojo-attach-point="workspaceAsAnon" data-dojo-type="app.ValidationWorkspace" />
+        <label for="${id}_workspace_name">Workspace name</label>
+        <input name="workspace" id="${id}_workspace_name" data-dojo-attach-point="workspaceAsAnon" data-dojo-type="app.ValidationWorkspace" />
         <label for="${id}_email">Email</label>
         <input name="email" id="${id}_email" data-dojo-attach-point="email" data-dojo-type="app.ValidationEmail" />
         <label for="${id}_login">Login</label>
