--- a/server/views/ws.jade
+++ b/server/views/ws.jade
@@ -1,6 +1,6 @@
 !!!
 head#head
-  title#Booking Dojo AND #{login}
+  title Booking Dojo
   script(type='text/javascript', src='/libs/dojo/dojo/dojo.js',data-dojo-config="parseOnLoad: false, async:true,isDebug:false, cacheBust:false")
   link(type='text/css', rel='stylesheet', href="/app/main.css")
   link(type='text/css', rel='stylesheet', href="/app/widgets/css/AlertBar.css")
