--- a/server/views/notFound.jade
+++ b/server/views/notFound.jade
@@ -1,6 +1,6 @@
 !!!
 head#head
-  title#Booking Dojo
+  title Booking Dojo
   link(type='text/css', rel='stylesheet', href="/app/rrl.css")
 body.claro
   h1 Sorry! 
