--- a/server/views/pick.jade
+++ b/server/views/pick.jade
@@ -1,6 +1,6 @@
 !!!
 head#head
-  title#Booking Dojo
+  title Booking Dojo
   script(type='text/javascript', src='/libs/dojo/dojo/dojo.js',data-dojo-config="parseOnLoad: false, async:true,isDebug:false, cacheBust:false")
   link(type='text/css', rel='stylesheet', href="/app/rrl.css")
   link(type='text/css', rel='stylesheet', href="/app/widgets/css/AlertBar.css")
