--- a/client/widgets/templates/RegisterForm.html
+++ b/client/widgets/templates/RegisterForm.html
@@ -16,7 +16,7 @@
         <label for="${id}_email">Email</label>
         <input name="email" id="${id}_email" data-dojo-attach-point="email" data-dojo-type="app.ValidationEmail" />
         <label for="${id}_login">Login</label>
-        <input name="login" id="${id}_login" data-dojo-attach-point="login" data-dojo-type="app.ValidationUsername" />
+        <input name="login" id="${id}_login" data-dojo-attach-point="login" data-dojo-type="app.ValidationUsername" data-dojo-props="okIfPresent:false, ajaxInvalidMessage:'Username taken!'" />
         <label for="${id}_password0">Password</label>
         <input name="password" type="password" id="${id}_password0" data-dojo-attach-point="password0" data-dojo-type="app.ValidationPassword" />
         <label for="${id}_password1">Confirm password</label>
@@ -32,7 +32,7 @@
       <div data-dojo-type="app.AlertBar" data-dojo-attach-point="alertBarAsUser"></div>
       <form style="height:100%" data-dojo-type="dijit.form.Form" data-dojo-attach-point="formAsUser" method="POST">
         <label for="${id}_workspace_anon">Workspace name</label>
-        <input name="workspace" id="${id}_workspace_anon" data-dojo-attach-point="workspaceAsUser" data-dojo-type="app.ValidationWorkspace" />
+        <input name="workspace" id="${id}_workspace_anon" data-dojo-attach-point="workspaceAsUser" data-dojo-type="app.ValidationWorkspace" data-dojo-props="okIfPresent:false, ajaxInvalidMessage:'Workspace taken!'"/>
         <input type="submit" data-dojo-attach-point="buttonAsUser" data-dojo-type="app.BusyButton" label="Create!" />
       </form>     
     </div>
