--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>{{ site.name }}</title>
+    <title>Hotplate -- documentation</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/mercmobily/hotplate">View on GitHub</a>
 
-          <h1 id="project_title">{{ site.name }}</h1>
-          <h2 id="project_tagline">{{ site.description }}</h2>
+          <h1 id="project_title">Hotplate -- documentation</h1>
+          <h2 id="project_tagline">>Framework to create multi-homed SaaS with NodeJs, Express, (any)DB, DojoHotplate -- documentation</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/mercmobily/hotplate/zipball/master">Download this project as a .zip file</a>
