--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/mercmobily/hotplate">View on GitHub</a>
 
           <h1 id="project_title">Hotplate -- documentation</h1>
-          <h2 id="project_tagline">>Framework to create multi-homed SaaS with NodeJs, Express, (any)DB, DojoHotplate -- documentation</h2>
+          <h2 id="project_tagline">Multi-homed SaaS with NodeJs, Express, (any)DB, Dojo</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/mercmobily/hotplate/zipball/master">Download this project as a .zip file</a>
