Example page added

--- a/modules/client-app-frame/fragments/render.html
+++ b/modules/client-app-frame/fragments/render.html
@@ -1,6 +1,7 @@
       ${drawer}
       <main role="main" class="main-content">
         <!-- App pages -- start -->
+        <<%=vars.elPrefix%>-example class="page" ></<%=vars.elPrefix%>-example>
         <<%=vars.elPrefix%>-page-load-error class="page"></<%=vars.elPrefix%>-page-load-error>
         <<%=vars.elPrefix%>-page-not-found page-path="/**" class="page"></<%=vars.elPrefix%>-page-not-found>
         <!-- App pages -- end -->
