--- a/modules/client-app-frame/fragments/render.html
+++ b/modules/client-app-frame/fragments/render.html
@@ -1,9 +1,9 @@
       ${drawer}
       <main role="main" class="main-content">
         <!-- App pages -- start -->
-        <<%=vars.elPrefix%>-example class="page" ></<%=vars.elPrefix%>-example>
         <<%=vars.elPrefix%>-page-load-error class="page"></<%=vars.elPrefix%>-page-load-error>
         <<%=vars.elPrefix%>-page-not-found page-path="/**" class="page"></<%=vars.elPrefix%>-page-not-found>
+        <<%=vars.elPrefix%>-main class="page" ></<%=vars.elPrefix%>-landing>
         <!-- App pages -- end -->
       </main>
       <co-snack-bar></co-snack-bar>
