First working version

--- a/modules/client-app-frame/fragments/render.html
+++ b/modules/client-app-frame/fragments/render.html
@@ -3,7 +3,7 @@
         <!-- App pages -- start -->
         <<%=vars.elPrefix%>-page-load-error class="page"></<%=vars.elPrefix%>-page-load-error>
         <<%=vars.elPrefix%>-page-not-found page-path="/**" class="page"></<%=vars.elPrefix%>-page-not-found>
-        <<%=vars.elPrefix%>-main class="page" ></<%=vars.elPrefix%>-landing>
+        <<%=vars.elPrefix%>-page-landing class="page" ></<%=vars.elPrefix%>-page-landing>
         <!-- App pages -- end -->
       </main>
       <co-snack-bar></co-snack-bar>
