--- a/modules/server-db-store/distr/STORE.ejs
+++ b/modules/server-db-store/distr/STORE.ejs
@@ -21,18 +21,18 @@ class StoreTemplate extends MysqlMixin(HttpMixin(JsonRestStores)) {
   // Default sort (only used when no sorting is specified) and
   // sortable fields
   static get defaultSort () { return { } } // e.g. { surname: : -1 }
-  static get sortableFields () { return [] } // e.g. ['surname', 'name']
+  static get sortableFields () { return <%-vars.newStoreInfo.sortableFields.length ? JSON.stringify(vars.newStoreInfo.sortableFields) : '[    ]' %> } } // e.g. ['surname', 'name']
 
   // Position and placement configuration
-  static get positionField () { return '<%=vars.newStoreInfo.positionField ? vars.newStoreInfo.positionField : '' %>' }
-  static get positionFilter () { return [] }
-  static get beforeIdField () { return '<%=vars.newStoreInfo.beforeIdField %>' }
+  static get positionField () { return '<%=-vars.newStoreInfo.positioning ? vars.newStoreInfo.positionField : '' %>' }
+  static get positionFilter () { return <%-vars.newStoreInfo.positionFilter.length ? JSON.stringify(vars.newStoreInfo.positionFilter) : '[   ]' %> }
+  static get beforeIdField () { return '<%vars.newStoreInfo.beforeIdField %>' }
   
   // The next 3 fields will define the stores' URL, in this case
   // it will be `/stores/2.0.0/storeTemplate/:id`.
   static get publicURLprefix () { return '<%=vars.newStoreInfo.publicURLprefix%>' }
   static get version () { return '<%=vars.newStoreInfo.version%>' }
-  static get publicURL () { return '<%=vars.newStoreInfo.publicURL%>/:id' }
+  static get publicURL () { return '<%=vars.newStoreInfo.publicURL%>/:<%=vars.newStoreInfo.idProperty%>' }
 
   // This is a unique name for the store. It should match the store name in the URL
   static get storeName () { return '<%=vars.newStoreInfo.name%>' }
