Fixed botched changed insertion point for store fields

--- a/modules/server-store/distr/STORE.ejs
+++ b/modules/server-store/distr/STORE.ejs
@@ -24,7 +24,7 @@ class StoreTemplate extends HttpMixin(JsonRestStores) {
   static get schema () {
     return new Schema({
 <%-vars.newStoreInfo.fields%>      
-      <!-- Fields insertion point -->
+      /* Fields insertion point */
     })
   }
 
