--- a/common/plain-PREFIX-ELEMENTNAME.ejs
+++ b/common/plain-PREFIX-ELEMENTNAME.ejs
@@ -1,5 +1,5 @@
 /* Loaded modules -- start */
-import { html, css } from 'lit-element'
+import { html, css } from 'lit'
 import { <%=vars.newElementInfo.baseClass%> } from '<%=vars.newElementInfo.libPath%>/base/<%=vars.newElementInfo.baseClass%>.js'
 /* Loaded modules -- end */
 
