Syntax error in CSS

--- a/common/add-edit-PREFIX-ELEMENTNAME.ejs
+++ b/common/add-edit-PREFIX-ELEMENTNAME.ejs
@@ -14,7 +14,7 @@ class Element extends <%=vars.newElementInfo.baseClass%> {
       css`
         :host {
           /* Host styles -- start */
-          display: block
+          display: block;
           /* Host styles -- end */
         }
         /* Element styles -- start */
