--- a/modules/server-store/distr/STORE.ejs
+++ b/modules/server-store/distr/STORE.ejs
@@ -47,13 +47,12 @@ class StoreTemplate extends HttpMixin(JsonRestStores) {
 <% } -%>
 
   // The next 3 fields will define the stores' URL, in this case
-  // it will be `/stores/2.0.0/storeTemplate/:id`.
-  static get publicURLprefix () { return '<%=vars.newStoreInfo.publicURLprefix%>' }
+  static get publicURLprefix () { return '<%=userInput['server-stores'].publicURLprefix%>' }
   static get version () { return '<%=vars.newStoreInfo.version%>' }
   static get publicURL () { return '<%=vars.newStoreInfo.publicURL%>/:<%=vars.newStoreInfo.idProperty%>' }
 
   // This is a unique name for the store. It should match the store name in the URL
-  static get storeName () { return '<%=vars.newStoreInfo.name%>' }
+  static get storeName () { return '<%=vars.newStoreInfo.storeName%>' }
 
   // Storing options
   static get emptyAsNull () { return <%=vars.newStoreInfo.emptyAsNull ? 'true' : 'false' %> } // An empty value will be treated as NULL
