Using  TPE's snack bar

--- a/modules/client-app-frame/fragments/render.html
+++ b/modules/client-app-frame/fragments/render.html
@@ -3,4 +3,4 @@ ${drawer}
   <!-- App pages -- start -->
   <!-- App pages -- end -->
 </main>
-<co-snack-bar></co-snack-bar>
+<ee-snack-bar></ee-snack-bar>
