WIP add edit screens

--- a/common/add-edit-PREFIX-ELEMENTNAME.ejs
+++ b/common/add-edit-PREFIX-ELEMENTNAME.ejs
@@ -31,6 +31,7 @@ class Element extends <%=vars.newElementInfo.baseClass%> {
     this.pageTitle = '<%-vars.newElementInfo.menuTitle%>'
 <% } -%>
     this.store = '<%-vars.newElementInfo.store.storeName%>'
+    this.record = {}
     /* Constructor -- end */
   }
 
@@ -42,8 +43,7 @@ class Element extends <%=vars.newElementInfo.baseClass%> {
       <section>
         <h2><%=vars.newElementInfo.nameNoPrefix%></h2>
         ${this.renderAddEditForm(html`
-          
-          <%- vars.newElementInfo.fieldElements %>
+
           <!-- Add/Edit field insertion point -->
 
         `)}
