--- a/common/view-PREFIX-ELEMENTNAME.ejs
+++ b/common/view-PREFIX-ELEMENTNAME.ejs
@@ -28,8 +28,10 @@ class Element extends <%=vars.newElementInfo.baseClass%> {
     super()
     /* Constructor -- start */
 <%if(vars.newElementInfo.ownHeader){ -%>
-    this.pageTitle = '<%=vars.newElementInfo.menuTitle%>'
+    this.pageTitle = '<%-vars.newElementInfo.menuTitle%>'
 <% } -%>
+    this.store = '<%-vars.newElementInfo.store.storeName%>'
+    this.record = {}
     /* Constructor -- end */
   }
 
@@ -40,6 +42,11 @@ class Element extends <%=vars.newElementInfo.baseClass%> {
       <%if(vars.newElementInfo.ownHeader){ %>${this.renderHeader()} <% } %>
       <section>
         <h2><%=vars.newElementInfo.nameNoPrefix%></h2>
+        ${this.renderElementViewer(html`
+
+          <!-- View field insertion point -->
+          
+        `)}
         <!-- Element insertion point -->
       </section>
       <!-- Element render -- end -->
