--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -1,9 +1,10 @@
 /* Loaded modules -- start */
 import { html, css } from 'lit'
 import { <%=vars.newElementInfo.baseClass%> } from '<%=vars.newElementInfo.libPath%>/base/<%=vars.newElementInfo.baseClass%>.js'
+import { <%=vars.newElementInfo.baseMixin%> } from '<%=vars.newElementInfo.libPath%>/base/<%=vars.newElementInfo.baseMixin%>.js'
 /* Loaded modules -- end */
 
-class Element extends <%=vars.newElementInfo.baseClass%> {
+class Element extends <%=vars.newElementInfo.baseMixin%>(<%=vars.newElementInfo.baseClass%>) {
   <%if(vars.newElementInfo.ownPath){ %>static get pagePath () { return ['<%=vars.newElementInfo.pagePath%>'] }<% } else { %>// No URL since this is not a page<% } %>
 
   static get styles () {
