--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -39,24 +39,25 @@ class Element extends <%=vars.newElementInfo.baseMixin%>(<%=vars.newElementInfo.
     return html`
       <!-- Element render -- start -->
       <%if(vars.newElementInfo.ownHeader){ %>${this.renderHeader()} <% } %>
-      <%if(vars.newElementInfo.hasPath)) { -%>
-        <ee-tabs use-hash passive id="tab-<%=vars.newElementInfo.nameNoPrefix%>" default="" name-attribute="tab-name">
-          <a name=\"<%=vars.newElementInfo.nameNoPrefix%>\" href=\"<%=vars.newElementInfo.destination.pagePath%><%=vars.newElementInfo.subPath%>\"><div><%=scaffoldizerUtils.capitalize(vars.newElementInfo.nameNoPrefix)%></div></a>
+      <%if(vars.newElementInfo.ownPath) { -%>
+      
+      <ee-tabs use-hash passive id="tab-<%=vars.newElementInfo.nameNoPrefix%>" default="" name-attribute="tab-name">
+      <a name="<%=vars.newElementInfo.nameNoPrefix%>" href="<%=vars.newElementInfo.pagePath%><%=vars.newElementInfo.subPath%>"><div><%=scaffoldizerUtils.capitalize(vars.newElementInfo.nameNoPrefix)%></div></a>
 
-          <!-- Page tab heading insertion point -->
-            <div routing-group=\"<%=vars.newElementInfo.destination.pagePath%>\" slot=\"content\">
-              <h2><%=vars.newElementInfo.nameNoPrefix%></h2>
-              <!-- Element insertion point -->
-            </section>
-          </div>
-          
-          <!-- Page tab insertion point -->
-        </ee-tabs>
-      <% } else { %>
-        <section>
+      <!-- Page tab heading insertion point -->
+        <div routing-group="<%=vars.newElementInfo.name%>" slot="content">
           <h2><%=vars.newElementInfo.nameNoPrefix%></h2>
           <!-- Element insertion point -->
-        </section> 
+        </section>
+      </div>
+      
+      <!-- Page tab insertion point -->
+    </ee-tabs>
+      <% } else { %>
+    <section>
+      <h2><%=vars.newElementInfo.nameNoPrefix%></h2>
+      <!-- Element insertion point -->
+    </section> 
       <% } %>
 
       <!-- Element render -- end -->
