--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -45,11 +45,10 @@ class Element extends <%=vars.newElementInfo.baseMixin%>(<%=vars.newElementInfo.
       <a name="<%=vars.newElementInfo.nameNoPrefix%>" href="<%=vars.newElementInfo.pagePath%><%=vars.newElementInfo.subPath%>"><div><%=scaffoldizerUtils.capitalize(vars.newElementInfo.nameNoPrefix)%></div></a>
 
       <!-- Page tab heading insertion point -->
-        <div routing-group="<%=vars.newElementInfo.name%>" slot="content">
+        <div page-path="<%=vars.newElementInfo.pagePath%>" routing-group="<%=vars.newElementInfo.name%>" slot="content">
           <h2><%=vars.newElementInfo.nameNoPrefix%></h2>
           <!-- Element insertion point -->
-        </section>
-      </div>
+        </div>
       
       <!-- Page tab insertion point -->
     </ee-tabs>
