--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -4,7 +4,7 @@ import { <%=vars.newElementInfo.baseClass%> } from '<%=vars.newElementInfo.libPa
 /* Loaded modules -- end */
 
 class Element extends <%=vars.newElementInfo.baseClass%> {
-  <%if(vars.newElementInfo.ownPath){ %>static get pagePath () { return ['<%=vars.newElementInfo.pagePath%>'] }<% } else { %>// No URL since this is not a page<% } %>
+  <%if(vars.newElementInfo.isPage){ %>static get pagePath () { return ['<%=vars.newElementInfo.pagePath%>'] }<% } else { %>// No URL since this is not a page<% } %>
 
   static get styles () {
     return [
@@ -27,7 +27,7 @@ class Element extends <%=vars.newElementInfo.baseClass%> {
   constructor () {
     super()
     /* Constructor -- start */
-<%if(vars.newElementInfo.ownHeader){ -%>
+<%if(vars.newElementInfo.mainAppPage){ -%>
     this.pageTitle = '<%=vars.newElementInfo.menuTitle%>'
 <% } -%>
     /* Constructor -- end */
@@ -37,8 +37,8 @@ class Element extends <%=vars.newElementInfo.baseClass%> {
     /* Element render function -- start */
     return html`
       <!-- Element render -- start -->
-      <%if(vars.newElementInfo.ownHeader){ %>${this.renderHeader()} <% } -%>
-      <%if(vars.newElementInfo.ownPath) { -%>
+      <%if(vars.newElementInfo.mainAppPage){ %>${this.renderHeader()} <% } -%>
+      <%if(vars.newElementInfo.isStack) { -%>
       
       <ee-tabs use-hash passive id="tab-<%=vars.newElementInfo.nameNoPrefix%>" default="" name-attribute="tab-name">
       <!-- Page tab heading insertion point -->
