--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -1,62 +1,37 @@
-/* Loaded modules -- start */
 import { html, css } from 'lit'
 import { <%=vars.newElementInfo.elementClass%> } from '<%=vars.newElementInfo.libPath%>/base/<%=vars.newElementInfo.elementClass%>.js'
-/* Loaded modules -- end */
 
 class Element extends <%=vars.newElementInfo.elementClass%> {
   <%if(vars.newElementInfo.isPage){ %>static get pagePath () { return ['<%=vars.newElementInfo.pagePath%>'] }<% } else { %>// No URL since this is not a page<% } %>
 
   static get styles () {
     return [
-      /* Style array -- start */
       ...super.styles,
-      /* Style array -- end */
       css`
         :host {
-          /* Host styles -- start */
           display: block;
-          /* Host styles -- end */
         }
-        /* Element styles -- start */
-        /* Element styles -- end */
       `
     ]
   }
 
-  /* Element methods -- start */
   constructor () {
     super()
-    /* Constructor -- start */
-<%if(vars.newElementInfo.mainAppPage){ -%>
+<%if(vars.newElementInfo.isPage){ -%>
     this.pageTitle = '<%=vars.newElementInfo.menuTitle%>'
 <% } -%>
-    /* Constructor -- end */
   }
 
   render () {
-    /* Element render function -- start */
     return html`
-      <!-- Element render -- start -->
-      <%if(vars.newElementInfo.mainAppPage){ %>${this.renderHeader()} <% } -%>
-      <%if(vars.newElementInfo.isStack) { -%>
+      <%if(vars.newElementInfo.isPage){ %>${this.renderHeader()} <% } -%>
       
-      <ee-tabs use-hash passive id="tab-<%=vars.newElementInfo.nameNoPrefix%>" default="" name-attribute="tab-name">
-      <!-- Page tab heading insertion point -->
-
-      <!-- Element insertion point -->
+      <ee-tabs use-hash id="tab-<%=vars.newElementInfo.nameNoPrefix%>" default="" name-attribute="tab-name">
+        <div is-main-tab routing-group="<%=vars.newElementInfo.nameNoPrefix%>" slot="content">
+        </div>
       </ee-tabs>
-      <% } else { %>
-      <section>
-        <h2><%=vars.newElementInfo.nameNoPrefix%></h2>
-        <!-- Element insertion point -->
-      </section> 
-      <% } %>
-
-      <!-- Element render -- end -->
     `
-    /* Element render function -- end */
   }
-  /* Element methods -- end */
 }
 
 window.customElements.define('<%=vars.newElementInfo.nameWithPrefix%>', Element)
