--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -28,6 +28,8 @@ class Element extends <%=vars.newElementInfo.elementClass%> {
       
       <ee-tabs use-hash id="tab-<%=vars.newElementInfo.nameNoPrefix%>" default="" name-attribute="tab-name">
         <div is-main-tab routing-group="<%=vars.newElementInfo.nameNoPrefix%>" slot="content">
+          <contents>
+          </contents>
         </div>
       </ee-tabs>
     `
