--- a/modules/client-app-frame/fragments/render.html
+++ b/modules/client-app-frame/fragments/render.html
@@ -1,6 +1,6 @@
 ${drawer}
 <main role="main" class="main-content">
-  <!-- App pages -- start -->
-  <!-- App pages -- end -->
+  <!-- App pages -->
 </main>
+
 <ee-snack-bar></ee-snack-bar>
