--- a/modules/client-app-frame/fragments/render.html
+++ b/modules/client-app-frame/fragments/render.html
@@ -1,6 +1,13 @@
 ${drawer}
 <main role="main" class="main-content">
-  <!-- App pages -->
+  <div main-pages>
+    <!-- App pages -->
+  </div>
+
+  <div tailend>
+    <!-- App pages (to be added to the tail end)-->
+  </div>
+  
 </main>
 
 <ee-snack-bar></ee-snack-bar>
