--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -2,7 +2,7 @@ import { html, css } from 'lit'
 import { <%=vars.newElementInfo.elementClass%> } from '<%=vars.newElementInfo.libPath%>/base/<%=vars.newElementInfo.elementClass%>.js'
 
 class Element extends <%=vars.newElementInfo.elementClass%> {
-  <%if(vars.newElementInfo.isPage){ %>static get pagePath () { return ['<%=vars.newElementInfo.pagePath%>'] }<% } else { %>// No URL since this is not a page<% } %>
+  <%if(vars.newElementInfo.typeOfElement === 'page'){ %>static get pagePath () { return ['<%=vars.newElementInfo.pagePath%>'] }<% } else { %>// No URL since this is not a page<% } %>
 
   static get styles () {
     return [
@@ -17,14 +17,14 @@ class Element extends <%=vars.newElementInfo.elementClass%> {
 
   constructor () {
     super()
-<%if(vars.newElementInfo.isPage){ -%>
+<%if(vars.newElementInfo.typeOfElement === 'page'){ -%>
     this.pageTitle = '<%=vars.newElementInfo.title%>'
 <% } -%>
   }
 
   render () {
     return html`
-      <%if(vars.newElementInfo.isPage){ %>${this.renderHeader()} <% } -%>
+      <%if(vars.newElementInfo.typeOfElement === 'page'){ %>${this.renderHeader()} <% } -%>
       
       <ee-tabs use-hash id="tab-<%=vars.newElementInfo.nameNoPrefix%>" default="main" name-attribute="tab-name">
         
