--- a/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
+++ b/modules/client-app-element/distr/PREFIX-ELEMENTNAME.ejs
@@ -31,7 +31,7 @@ class Element extends <%=vars.newElementInfo.elementClass%> {
         
         <a href="<%=vars.newElementInfo.pagePath%>#main" tab-name="main"><div>Main</div></a>
 
-        <div tab-name="main" routing-group="<%=vars.newElementInfo.nameNoPrefix%>" slot="content">
+        <div tab-name="main" slot="content">
           <contents>
              <h1><%=vars.newElementInfo.nameNoPrefix%></h1>
           </contents>
